<resources>
    <string name="app_name">PROG7313_PART_3</string>
    <string name="homeIntroText">Please select your option.</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="username">Username</string>
    <string name="type_in_your_username">Type in your Username</string>
    <string name="type_in_your_password">Type in your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="user_balance">User Balance: $</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="budget_goal">Budget Goal</string>
    <string name="upload_image">Upload Image</string>
    <string name="Username">Username\n</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>