<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:text="Add New Transaction"
            android:textAlignment="center"
            android:textColor="@color/blue_500"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="327dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/lblAmount"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Amount:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="R0.00"
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/grey_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/lblCategory"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Category:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter here..."
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/grey_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/dtDate"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Date:"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="date"
                    android:textColorHint="@color/grey_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/lblPayment"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Payment Method:"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtPaymentMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Select here..."
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/grey_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="18dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="139dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Description"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter here.."
                    android:inputType="numberDecimal"
                    android:textColorHint="@color/grey_500" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save"
                android:background="@color/blue_500" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:background="@color/grey_500" />
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>